--- a/NextJS/16_editor_board/public/common.css
+++ b/NextJS/16_editor_board/public/common.css
@@ -12,3 +12,8 @@ input[type="text"], input[type="password"] {
     width: 99%;
     border: 1px solid lightgray;
 }
+
+button {
+    margin-left: 15px;
+    margin-bottom: 5px;
+}
