--- a/JPA/14_EncodeMember/src/main/resources/static/css/common.css
+++ b/JPA/14_EncodeMember/src/main/resources/static/css/common.css
@@ -19,7 +19,7 @@ table {
 th, td {
   border-bottom: 1px solid #f4c6d4;
   padding: 12px 16px;
-  text-align: center;
+  /*text-align: center;*/
   font-size: 1rem;
   color: #6d4057;
 }
@@ -92,3 +92,7 @@ textarea {
 #prev img:hover {
   transform: scale(1.08);
 }
+input[name="id"]{
+	width : 80%;
+}
+
